Add data to footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,7 @@ body {
     margin: 1.4rem;
     border-radius: 5px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    z-index: 2000;
 }
 
 #navbar.opened .navbar-links {
@@ -168,10 +169,11 @@ body {
 
 .main-container {
     border: 1px solid red;
-    position:relative;
+    position:absolute;
     left: 0;
     right: 0;
     top: 50px;
+    z-index: -1000;
 }
 
 .footer-container {
@@ -249,6 +251,11 @@ body {
     .footer-labels p {
         display: inline-block;
         border: 1px solid white;
+    }
+
+    .container {
+        overflow: hidden;
+        width: 100%;;
     }
 }
 
