layout for mobiles

--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ body {
     z-index: -1000;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 75% 25%;
     grid-template-rows: 25% 25% 1fr;
     grid-template-areas: 
         "search search"
@@ -305,6 +305,18 @@ body {
     .container {
         overflow: hidden;
         width: 100%;;
+    }
+
+    .main-container {
+
+        grid-template-columns: 1fr;
+        grid-template-rows: 25% 25% 1fr;
+        grid-template-areas: 
+            "search"
+            "name"
+            "image"
+            "fields"
+    
     }
 }
 
